# travelbuddy

./: .gitignore  README.md  docker-compose.yaml  package-lock.json
.github/workflows/: main.yml
POC/: AgentProcess_Streamlit.py  ChatPage_mapscalls 2.tsx  agents.py  app.py  chatpage-trialpromt 2.tsx  geocodingServicetrial.ts  main.py  requirements.txt  tasks.py
POC/Sn/: docker-compose.yaml
POC/load to pinecone/: config.py  pdf_loader.py  requirements.txt
POC/tools/: browser_tools.py  calculator_tools.py  file_io.py  search_tools.py
client/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: AppRouter.tsx  global.css  main.tsx  types.tsx
flight_service/: .gitignore  Dockerfile  requirements.txt
flight_service/app/: main.py
server/: Dockerfile  README.md  main.py  requirements.txt  test.py  test_direct_weather.py  test_weather.py
server/agents/: prompt.py  rootAgent.py
server/controllers/: llmController.py  llm_chat_historyController.py  userController.py
server/evaluation/: itinerary_seattle_example.json  test.py
server/middlewares/: auth.py  conn_database.py  conn_llm.py  init_db.py
server/models/: llm_chat_historyModel.py  userModel.py
server/prompts/: travel_instructions.txt  travel_keywords.txt
server/routes/: chatRoute 2.py  chatRoute.py  flightRoute.py  llmRoute.py  (+4 more)
weather-mcp/: fix_dependencies.py  pyproject.toml  requirements.txt  simplified_mcp_server.py  test_api_key.py  test_client.py  test_mcp_client.py  test_mcp_integration.py  update_api_key.py  weather_agent.py  weather_mcp_server.py
(+93 files in other folders)
